--- a/styel.css
+++ b/styel.css
@@ -8,7 +8,7 @@
 
 html {
     scroll-behavior: smooth;
-    font-size: 16px;
+    font-size: 16.5px;
 }
 
 
@@ -562,15 +562,24 @@ body {
 
 .contact-form {
     background: linear-gradient(135deg, #1a1a1a, #2a2a2a);
-    padding: 3rem;
+    padding: 2rem;
     border-radius: 25px;
     border: 1px solid #333333;
 }
 
 .form-group {
-    margin-bottom: 2rem;
+    margin-bottom: 20px;
+    /* width: 450px; */
+    width: 900%;
 }
 
+.contact-form {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .form-input {
     width: 100%;
     padding: 1.2rem;
